[package]
name = "secretary-ffi-bridge"
version = "0.1.0"
edition = "2021"
publish = false
description = "FFI-friendly facade of secretary-core; projected through PyO3 (secretary-ffi-py) and uniffi (secretary-ffi-uniffi). Single source of code truth for FFI thinned-error mapping and opaque-handle wrappers."

[lints]
workspace = true

[dependencies]
secretary-core = { path = "../../core" }
# `secretary-cli` provides the sync orchestration (pipeline::sync_pass_*) and
# the single-source SyncState CBOR + lockfile persistence (state::*). Pulled
# with default-features=false so the daemon deps (notify/clap) are NOT compiled
# into this bridge or the mobile bindings beneath it. See the cli `daemon`
# feature (cli/Cargo.toml) + the D.1.13 spec §"Code layering".
secretary-cli = { path = "../../cli", default-features = false }
# `rand_core::OsRng` feeds the OS CSPRNG into core's `create_vault`. Match
# the version pinned in core/Cargo.toml so we share the lock entry. The
# `getrandom` feature is required to enable the `OsRng` type.
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2"
# Used by `record::read_block` to format `BlockNotFound { uuid_hex }` and
# the CorruptVault detail strings as 32-char lowercase hex (matches
# `FfiVaultError::BlockNotFound`'s documented `uuid_hex` shape). Runtime
# dep — the read path needs it on every error mapping. Also used in
# integration tests under `tests/`, so the `[dev-dependencies]` entry
# below is now redundant; kept removed to avoid the duplicate.
hex = "0.4"
# `zeroize` is on the security-critical path: opaque handles wrapping
# secret-bearing core types must zeroize on drop. Pinned to an EXACT
# version (not a caret range) so that any patch / minor / major bump
# requires a deliberate changelog review of the relevant `Zeroize`
# impls. Same discipline as core/Cargo.toml; same reason — the failure
# mode is silent.
zeroize = "=1.8.2"
# `tempfile` is on the security-critical atomic-write path: `import_contact_card`
# (D.1.6) writes `contacts/<uuid>.card` via `NamedTempFile::new_in + sync_all +
# persist` (rename(2) semantics) because core's `write_atomic` is `pub(crate)`
# and unreachable from this crate. Pinned to an EXACT version (matching
# core/Cargo.toml) — not a caret range — so any bump requires a deliberate
# changelog review, since a regression in `persist` semantics (silent fallback
# to a non-atomic copy) would weaken the §5 atomicity guarantee. Same discipline
# and reason as core/Cargo.toml. Also covers the `[dev-dependencies]` TempDir
# usage (a runtime dep is visible to test targets), so no separate dev entry.
tempfile = "=3.27.0"

[dev-dependencies]
# Match the version pinned in core/Cargo.toml so we share the lock entry.
rand_chacha = "0.3"
# used by block_summaries_returns_pinned_layout_for_v1 to parse the
# golden_vault_001_inputs.json cross-check.
serde_json = "1"
# `hex` is now a runtime dep (see [dependencies] above for the rationale);
# tests inherit it via the unified entry there.
# Property-based tests for save_block round-trip. Match version pinned in
# core/Cargo.toml so the workspace shares one resolved version.
proptest = "1"
